--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#066e8a</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#066e8a</color>
     <color name="colorAccent">#D81B60</color>
     <color name="Red">#FF0000</color>
     <color name="light_green">#7CFC00</color>
