--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -9,6 +9,14 @@
         android:id="@+id/imageView6"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@mipmap/background"/>
+        android:background="@mipmap/background">
+
+        <ImageView
+            android:id="@+id/displayProFilePic"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+    </ImageView>
 
 </LinearLayout>
