--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -12,10 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/cl"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include">
+        app:layout_constraintStart_toStartOf="parent">
 
         <TableLayout
             android:id="@+id/table"
@@ -70,6 +68,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:stretchColumns="*" />
+
         </ScrollView>
 
     </LinearLayout>
