--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -2,21 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
-    android:background="@color/white">
+    android:layout_height="match_parent"
+    android:background="@mipmap/background">
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@mipmap/background">
-
-        <ImageView
-            android:id="@+id/displayProFilePic"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
-
-    </ImageView>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/DP"
+            android:layout_marginTop="200dp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/baseline_photo_size_select_actual_black_48dp"/>
 
 </LinearLayout>
