--- a/app/src/main/res/layout/account_details.xml
+++ b/app/src/main/res/layout/account_details.xml
@@ -21,9 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        app:civ_border_color="@color/colorPrimary"
-        app:civ_border_width="3dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/cardview_shadow_end_color"
+        app:civ_border_color="@color/common_google_signin_btn_text_dark_disabled"
+        app:civ_border_width="10dp"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +43,8 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp">
 
             <TextView
                 android:id="@+id/textView"
