--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/relativeLayout3"
-    android:background="@color/signupColor"
     tools:context=".Register"
-    tools:layout_editor_absoluteY="81dp"
+    android:background="@mipmap/background"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
@@ -16,9 +15,12 @@
         android:layout_height="wrap_content"
         android:background="@drawable/buttonshapelogin"
         android:text="Login"
+        android:layout_marginRight="50dp"
+        android:backgroundTint="@color/white"
+        android:backgroundTintMode="add"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/mob_num"
-        app:layout_constraintTop_toBottomOf="@+id/mob_num" />
+        app:layout_constraintEnd_toEndOf="@+id/register_Mobile_Number"
+        app:layout_constraintTop_toBottomOf="@+id/register_Mobile_Number" />
 
     <Button
         android:id="@+id/create"
@@ -26,82 +28,143 @@
         android:layout_height="wrap_content"
         android:background="@drawable/buttonshapelogin"
         android:text="Register"
+        android:layout_marginLeft="50dp"
+        android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/mob_num"
-        app:layout_constraintTop_toBottomOf="@+id/mob_num" />
+        app:layout_constraintStart_toStartOf="@+id/register_Mobile_Number"
+        app:layout_constraintTop_toBottomOf="@+id/register_Mobile_Number" />
 
-    <EditText
-        android:id="@+id/user"
-        android:layout_width="215dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="64dp"
-        android:background="@drawable/username"
-        android:drawableLeft="@drawable/ic_person_black_24dp"
-        android:ems="10"
-        android:hint="Username"
-        android:inputType="textPersonName"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView4"
-        app:layout_constraintStart_toStartOf="@+id/imageView4"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/Username"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="User Name"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="30dp"
+        app:endIconMode="clear_text"
+        android:textColorHint="@color/white"
+        app:hintTextColor="@color/white"
+        app:boxStrokeColor="@color/white"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
+        app:startIconDrawable="@drawable/user"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4">
 
-    <EditText
-            android:id="@+id/pass"
-            android:layout_width="215dp"
-            android:layout_height="36dp"
-            android:layout_marginTop="28dp"
-            android:background="@drawable/username"
-            android:drawableLeft="@drawable/ic_person_black_24dp"
-            android:ems="10"
-            android:hint="Password"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/register_User_name"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="@color/white"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/pass"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Password"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="30dp"
+        app:endIconMode="password_toggle"
+        app:startIconDrawable="@drawable/password"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
+        android:textColorHint="@color/white"
+        app:hintTextColor="@color/white"
+        app:boxStrokeColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Username">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/register_Password"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:inputType="textPassword"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="@+id/user"
-            app:layout_constraintStart_toStartOf="@+id/user"
-            app:layout_constraintTop_toBottomOf="@+id/user" />
+            android:textColor="@color/white"/>
 
-        <EditText
-            android:id="@+id/repass"
-            android:layout_width="215dp"
-            android:layout_height="36dp"
-            android:layout_marginTop="24dp"
-            android:background="@drawable/username"
-            android:drawableLeft="@drawable/ic_person_black_24dp"
-            android:ems="10"
-            android:hint="Re enter your pass"
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/register_rePassWord"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:hint="Re Enter Password"
+        app:endIconMode="password_toggle"
+        android:textColorHint="@color/white"
+        app:hintTextColor="@color/white"
+        app:boxStrokeColor="@color/white"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
+        app:startIconDrawable="@drawable/password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pass">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/register_Re_Password"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:inputType="textPassword"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="@+id/pass"
-            app:layout_constraintStart_toStartOf="@+id/pass"
-            app:layout_constraintTop_toBottomOf="@+id/pass" />
+            android:textColor="@color/white"/>
 
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="101dp"
-            android:layout_height="102dp"
-            android:layout_marginTop="72dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/loginlogo" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <EditText
-        android:id="@+id/mob_num"
-        android:layout_width="215dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="36dp"
-        android:background="@drawable/username"
-        android:drawableLeft="@drawable/ic_person_black_24dp"
-        android:ems="10"
-        android:hint="Mobile No"
-        android:inputType="number"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/repass"
-        app:layout_constraintStart_toStartOf="@+id/repass"
-        app:layout_constraintTop_toBottomOf="@+id/repass" />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/register_Mobile_Number"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:hint="Mobile Number"
+        app:endIconMode="clear_text"
+        app:startIconDrawable="@drawable/phone_icon"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
+        android:textColorHint="@color/white"
+        app:hintTextColor="@color/white"
+        app:boxStrokeColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register_rePassWord">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/register_MobileNumber"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="number"
+            android:textColor="@color/white"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="101dp"
+        android:layout_height="102dp"
+        android:layout_marginTop="68dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/loginlogo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
